key aligned chromagram with bin rotation

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -11,8 +11,10 @@
     "import soundfile as sf\n",
     "import librosa\n",
     "import madmom\n",
+    "from madmom.features.key import CNNKeyRecognitionProcessor, key_prediction_to_label\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "print(pyrb.__version__)"
    ]
   },
@@ -51,11 +53,11 @@
    "outputs": [],
    "source": [
     "# Process with madmom's RNN downbeat processor\n",
-    "proc = madmom.features.downbeats.RNNDownBeatProcessor()(filename)\n",
+    "downbeat_proc = madmom.features.downbeats.RNNDownBeatProcessor()(filename)\n",
     "\n",
     "# Decode with a DBN to get sequences of [beat, downbeat]\n",
     "beats = madmom.features.downbeats.DBNDownBeatTrackingProcessor(beats_per_bar=[3, 4],\n",
-    "                                                               fps=100)(proc)\n",
+    "                                                               fps=100)(downbeat_proc)\n",
     "\n",
     "# beats is an array of shape (N, 2):\n",
     "#   [:,0] = time (s)\n",
@@ -63,7 +65,16 @@
     "\n",
     "# Extract beat times and downbeat times\n",
     "beat_times = beats[:,0]\n",
-    "downbeat_times = beats[beats[:,1] == 1, 0]"
+    "downbeat_times = beats[beats[:,1] == 1, 0]\n",
+    "\n",
+    "\n",
+    "key_proc = CNNKeyRecognitionProcessor()\n",
+    "\n",
+    "# run on an audio file\n",
+    "prediction = key_proc(filename)\n",
+    "\n",
+    "# convert to readable label\n",
+    "key = key_prediction_to_label(prediction)"
    ]
   },
   {
@@ -72,7 +83,9 @@
    "id": "5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "key"
+   ]
   },
   {
    "cell_type": "code",
@@ -99,144 +112,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Spectrograms"
@@ -245,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "11",
    "metadata": {},
    "source": [
     "### Test Spectrogram Output"
@@ -328,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "13",
    "metadata": {},
    "source": [
     "### Download Image Chunks"
@@ -353,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -377,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -385,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -393,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -401,14 +278,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "20",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Chromagrams"
@@ -417,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "22",
    "metadata": {},
    "source": [
     "### Test Raw Chromagram Output (small on purpose)"
@@ -498,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "24",
    "metadata": {},
    "source": [
     "### Visualize Chromagram"
@@ -523,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,6 +447,142 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "43",
    "metadata": {},
    "outputs": [],
@@ -600,153 +613,17 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Make Beat-Unaligned Spectrogram"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,9 +698,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50",
+   "metadata": {},
+   "source": [
+    "# Make Beat-Unaligned Chromagram"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,12 +778,199 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_chromagram_image(chromas[3], cmap=\"inferno\", y_pixels=12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58",
+   "metadata": {},
+   "source": [
+    "# Make Key-Aligned Chromagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Map note names to chroma indices\n",
+    "NOTE_TO_INDEX = {\n",
+    "    'C': 0, 'C#': 1, 'Db': 1, 'D': 2, 'D#': 3, 'Eb': 3,\n",
+    "    'E': 4, 'F': 5, 'F#': 6, 'Gb': 6, 'G': 7, 'G#': 8, 'Ab': 8,\n",
+    "    'A': 9, 'A#': 10, 'Bb': 10, 'B': 11\n",
+    "}\n",
+    "\n",
+    "def rotate_chroma_to_C_major(chroma_image, key_str):\n",
+    "    \"\"\"\n",
+    "    Rotate a chromagram so that the song is aligned to C major (or A minor).\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    chroma_image : np.ndarray\n",
+    "        A chromagram image with shape (12, width).\n",
+    "    key_str : str\n",
+    "        Detected key, e.g. 'G major' or 'A minor'.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    rotated : np.ndarray\n",
+    "        Chromagram rotated so tonic aligns with C major.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Parse key\n",
+    "    parts = key_str.strip().split()\n",
+    "    if len(parts) != 2:\n",
+    "        raise ValueError(f\"Unexpected key format: {key_str}\")\n",
+    "    tonic, mode = parts[0], parts[1].lower()\n",
+    "\n",
+    "    if tonic not in NOTE_TO_INDEX:\n",
+    "        raise ValueError(f\"Unrecognized tonic: {tonic}\")\n",
+    "\n",
+    "    tonic_index = NOTE_TO_INDEX[tonic]\n",
+    "\n",
+    "    if mode == \"major\":\n",
+    "        offset = tonic_index\n",
+    "    elif mode == \"minor\":\n",
+    "        # shift to relative major (3 semitones up)\n",
+    "        offset = (tonic_index + 3) % 12\n",
+    "    else:\n",
+    "        raise ValueError(f\"Mode must be 'major' or 'minor', got: {mode}\")\n",
+    "\n",
+    "    # Rotate so tonic maps to C (index 0)\n",
+    "    rotated = np.roll(chroma_image, -offset, axis=0)\n",
+    "\n",
+    "    return rotated\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "# Suppose we have a chromagram (12, 128)\n",
+    "chroma_example = np.random.rand(12, 128)\n",
+    "rotated = rotate_chroma_to_C_major(chromas[3], \"G major\")\n",
+    "print(rotated.shape)  # (12, 128)\n",
+    "\n",
+    "plot_chromagram_image(rotated, cmap=\"inferno\", y_pixels=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63",
+   "metadata": {},
+   "source": [
+    "# Run Full Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -936,6 +1008,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": []
