completed process pipeline, need to sync image windows

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -129,7 +129,7 @@
     "import numpy as np\n",
     "import librosa\n",
     "\n",
-    "def make_downbeat_aligned_images(y, sr, downbeat_times, time_bins_per_downbeat=32, downbeats_in_image=4):\n",
+    "def make_downbeat_aligned_spectrogram(y, sr, downbeat_times, time_bins_per_downbeat=32, downbeats_in_image=4):\n",
     "    \"\"\"\n",
     "    Create log-mel spectrogram images aligned to downbeats.\n",
     "\n",
@@ -190,7 +190,7 @@
     "# Example usage:\n",
     "# y, sr = librosa.load(\"song.wav\", sr=None)\n",
     "# downbeat_times = [0.0, 1.0, 2.0, 3.0, 4.0]  # dummy\n",
-    "imgs = make_downbeat_aligned_images(y, sr, downbeat_times, time_bins_per_downbeat=128, downbeats_in_image=1)\n",
+    "imgs = make_downbeat_aligned_spectrogram(y, sr, downbeat_times, time_bins_per_downbeat=128, downbeats_in_image=1)\n",
     "print(len(imgs), imgs[0].shape)  # -> (N, (128, 128))\n"
    ]
   },
@@ -234,13 +234,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, arr in enumerate(imgs):\n",
-    "    # If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
-    "    if np.issubdtype(arr.dtype, np.floating):\n",
-    "        arr = (255 * (arr - arr.min()) / (arr.max() - arr.min())).astype(np.uint8)\n",
-    "    \n",
-    "    pil_img = Image.fromarray(arr)\n",
-    "    pil_img.save(f\"../Results/spectrogram_{i}.png\")"
+    "def downloadImagesArray(imgs, prefix):\n",
+    "    for i, arr in enumerate(imgs):\n",
+    "        # If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
+    "        if np.issubdtype(arr.dtype, np.floating):\n",
+    "            arr = (255 * (arr - arr.min()) / (arr.max() - arr.min())).astype(np.uint8)\n",
+    "        \n",
+    "        pil_img = Image.fromarray(arr)\n",
+    "        pil_img.save(f\"../Results/{prefix}_{i}.png\")"
    ]
   },
   {
@@ -249,7 +250,9 @@
    "id": "15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# downloadImagesArray(imgs, \"spectrogram\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -284,8 +287,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Chromagrams"
@@ -294,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "### Test Raw Chromagram Output (small on purpose)"
@@ -375,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "### Visualize Chromagram"
@@ -400,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,14 +454,6 @@
     "# Visualize the first chromagram\n",
     "plot_chromagram_image(imgs[0], cmap=\"inferno\", y_pixels=12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -613,8 +616,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48",
    "metadata": {},
    "source": [
     "# Make Beat-Unaligned Spectrogram"
@@ -623,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "source": [
     "# Make Beat-Unaligned Chromagram"
@@ -708,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,20 +789,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_chromagram_image(chromas[3], cmap=\"inferno\", y_pixels=12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -826,8 +829,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59",
    "metadata": {},
    "source": [
     "# Make Key-Aligned Chromagram"
@@ -836,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,14 +914,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "61",
    "metadata": {},
    "outputs": [],
@@ -925,8 +928,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64",
    "metadata": {},
    "source": [
     "# Run Full Pipeline"
@@ -935,18 +946,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "65",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
+    "y, sr = librosa.load(filename, sr=None)\n",
+    "\n",
+    "\n",
+    "downbeat_proc = madmom.features.downbeats.RNNDownBeatProcessor()(filename)\n",
+    "beats = madmom.features.downbeats.DBNDownBeatTrackingProcessor(beats_per_bar=[3, 4], fps=100)(downbeat_proc)\n",
+    "beat_times = beats[:,0]\n",
+    "downbeat_times = beats[beats[:,1] == 1, 0]\n",
+    "\n",
+    "\n",
+    "key_proc = CNNKeyRecognitionProcessor()\n",
+    "prediction = key_proc(filename)\n",
+    "key = key_prediction_to_label(prediction)\n",
+    "\n",
+    "\n",
+    "fixed_spectros = make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128)\n",
+    "downbeat_spectros = make_downbeat_aligned_spectrogram(y, sr, downbeat_times, time_bins_per_downbeat=128, downbeats_in_image=1)\n",
+    "\n",
+    "fixed_chromas = make_fixed_size_chromagrams(y, sr, n_seconds=3.0, width=128, hop_length=512)\n",
+    "downbeat_chromas = make_downbeat_aligned_chromagrams(y, sr, downbeat_times, time_bins_per_downbeat=128, downbeats_in_image=1)\n",
+    "rotated_fixed_chromas = [rotate_chroma_to_C_major(chroma_image, key) for chroma_image in fixed_chromas]\n",
+    "rotated_downbeat_chromas = [rotate_chroma_to_C_major(chroma_image, key) for chroma_image in downbeat_chromas]\n",
+    "\n",
+    "downloadImagesArray(fixed_spectros, \"unaligned_spectrogram\")\n",
+    "downloadImagesArray(downbeat_spectros, \"aligned_spectrogram\")\n",
+    "downloadImagesArray(fixed_chromas, \"unaligned_chromagram\")\n",
+    "downloadImagesArray(downbeat_chromas, \"aligned_chromagram\")\n",
+    "downloadImagesArray(fixed_chromas, \"rotated_unaligned_chromagram\")\n",
+    "downloadImagesArray(downbeat_chromas, \"rotated_aligned_chromagram\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1008,30 +1041,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": []
