fixed window sizing bug with explicit interpolation

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -641,9 +641,10 @@
     "import numpy as np\n",
     "import librosa\n",
     "\n",
-    "def make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128):\n",
+    "def make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128, hop_length=512):\n",
     "    \"\"\"\n",
-    "    Create a fixed-size mel spectrogram image with exactly (n_mels, width) shape.\n",
+    "    Create fixed-size mel spectrogram images (not beat aligned) using\n",
+    "    a single spectrogram computation + interpolation.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -657,38 +658,51 @@
     "        Number of time bins (pixels) in the spectrogram.\n",
     "    n_mels : int\n",
     "        Number of mel frequency bins.\n",
+    "    hop_length : int\n",
+    "        Hop length used to compute the base spectrogram.\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
     "    specs : list of np.ndarray\n",
     "        Each spectrogram of shape (n_mels, width).\n",
     "    \"\"\"\n",
-    "    # Compute hop_length so that n_seconds -> width frames\n",
-    "    hop_length = int(round((n_seconds * sr) / width))\n",
-    "\n",
-    "    # Frame length: usually 2–4× hop length for STFT stability\n",
+    "    # Use fixed hop_length (512 by default)\n",
     "    n_fft = hop_length * 4\n",
     "\n",
-    "    # Compute mel spectrogram\n",
+    "    # Compute mel spectrogram once\n",
     "    mel = librosa.feature.melspectrogram(y=y, sr=sr,\n",
     "                                         n_fft=n_fft,\n",
     "                                         hop_length=hop_length,\n",
     "                                         n_mels=n_mels)\n",
     "    mel_db = librosa.power_to_db(mel, ref=np.max)\n",
     "\n",
-    "    # Segment into non-overlapping windows of size `width`\n",
+    "    # Window length in frames\n",
+    "    window_length_frames = int(round(n_seconds * sr / hop_length))\n",
+    "\n",
     "    specs = []\n",
-    "    for i in range(0, mel_db.shape[1] - width + 1, width):\n",
-    "        window = mel_db[:, i:i + width]\n",
-    "        specs.append(window)\n",
+    "    for start in range(0, mel_db.shape[1] - window_length_frames + 1, window_length_frames):\n",
+    "        end = start + window_length_frames\n",
+    "        segment = mel_db[:, start:end]\n",
+    "\n",
+    "        if segment.shape[1] < 2:\n",
+    "            continue\n",
+    "\n",
+    "        # Interpolate to fixed width\n",
+    "        x_old = np.linspace(0, 1, segment.shape[1])\n",
+    "        x_new = np.linspace(0, 1, width)\n",
+    "        segment_resampled = np.vstack([\n",
+    "            np.interp(x_new, x_old, row) for row in segment\n",
+    "        ])\n",
+    "\n",
+    "        specs.append(segment_resampled)\n",
     "\n",
     "    return specs\n",
     "\n",
     "\n",
     "# Example usage\n",
     "# y, sr = librosa.load(\"song.wav\", sr=None)\n",
-    "spectros = make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128)\n",
-    "print(spectros[0].shape)  # (64, 128)\n"
+    "spectros = make_fixed_size_spectrogram(y, sr, n_seconds=3.0, width=128, n_mels=128, hop_length=512)\n",
+    "print(len(spectros), spectros[0].shape)  # -> (N, (128, 128))\n"
    ]
   },
   {
